# xmldict

./: .gitignore  LICENSE  README.md  pyproject.toml
src/xmldict/: __init__.py  __version__.py  xmldict.py
src/xmldict_light/: __init__.py  __version__.py
test/: test.py  xml.json  xml.xml
tests/: test_xmldict.py  xml.xml
