[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "XmlDict"
version="1.1.3"
description="XML JSON conversion"
authors = [
  { name="Daniel Rexin" },
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
keywords = ["json", "xml", "converter", "conversion"]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/DannieDarko/xmldict"
Issues = "https://github.com/DannieDarko/xmldict/issues"
