[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "XmlDict-light"
dynamic = ["version"]
description = "XML JSON conversion"
authors = [
  { name = "Daniel Rexin" },
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
keywords = ["json", "xml", "dict", "converter", "conversion"]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
]
test = [
  "pytest"
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[project.urls]
Homepage = "https://github.com/DannieDarko/xmldict"
Issues = "https://github.com/DannieDarko/xmldict/issues"
