[build-system]
requires = ["uv_build>=0.11.28,<0.12", "uv-dynamic-versioning"]
build-backend = "uv_build"

[project]
name = "XmlDict-light"
version = "1.1.6"
description = "XML JSON conversion tool"
authors = [
  { name = "Daniel Rexin" },
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
keywords = ["json", "xml", "dict", "converter", "conversion"]
license = { file = "LICENSE" }
dependencies = [
]
test = [
  "pytest"
]

[project.urls]
homepage = "https://github.com/DannieDarko/xmldict"
issues = "https://github.com/DannieDarko/xmldict/issues"
repository = "https://github.com/DannieDarko/xmldict"
